[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/message_box.gd" type="Script" id=1]
[ext_resource path="res://assets/message_box.png" type="Texture" id=2]
[ext_resource path="res://assets/down_arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/Qpix.ttf" type="DynamicFontData" id=4]

[sub_resource type="Animation" id=3]

resource_name = "Arrow"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("arrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.964844, 0.710913, 0.226135, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="message_box" type="Node2D" index="0"]

z_index = 1
z_as_relative = false
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="strechables" type="Node2D" parent="." index="0"]

editor/display_folded = true

[node name="up" type="Sprite" parent="strechables" index="0"]

position = Vector2( 0, -15 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 4
_sections_unfolded = [ "Animation", "Offset" ]

[node name="left" type="Sprite" parent="strechables" index="1"]

position = Vector2( -5, -10 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 5
_sections_unfolded = [ "Animation", "Offset" ]

[node name="bottom" type="Sprite" parent="strechables" index="2"]

position = Vector2( 5, -5 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 6
_sections_unfolded = [ "Animation" ]

[node name="right" type="Sprite" parent="strechables" index="3"]

position = Vector2( 10, -10 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 7
_sections_unfolded = [ "Animation" ]

[node name="in" type="Sprite" parent="strechables" index="4"]

position = Vector2( 0, -10 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 8
_sections_unfolded = [ "Animation" ]

[node name="movables" type="Node2D" parent="." index="1"]

editor/display_folded = true

[node name="up_left" type="Sprite" parent="movables" index="0"]

position = Vector2( -5, -15 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
_sections_unfolded = [ "Animation" ]

[node name="bottom_right" type="Sprite" parent="movables" index="1"]

position = Vector2( 10, -5 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 2
_sections_unfolded = [ "Animation" ]

[node name="up_right" type="Sprite" parent="movables" index="2"]

position = Vector2( 10, -15 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 3
_sections_unfolded = [ "Animation" ]

[node name="arrow" type="Sprite" parent="movables" index="3"]

visible = false
modulate = Color( 0.996709, 0.972941, 0.927564, 1 )
position = Vector2( 9, 6 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="movables" index="4"]

root_node = NodePath("..")
autoplay = "Arrow"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Arrow = SubResource( 3 )
blend_times = [  ]

[node name="fixed" type="Node2D" parent="." index="2"]

editor/display_folded = true

[node name="pivot" type="Sprite" parent="fixed" index="0"]

texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 10
_sections_unfolded = [ "Animation" ]

[node name="pivot2" type="Sprite" parent="fixed" index="1"]

position = Vector2( 0, -5 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 9
_sections_unfolded = [ "Animation" ]

[node name="bottom_left" type="Sprite" parent="fixed" index="2"]

position = Vector2( -5, -5 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 1
_sections_unfolded = [ "Animation" ]

[node name="text" type="Node2D" parent="." index="3"]

visible = false

[node name="message" type="Label" parent="text" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 201.0
margin_bottom = 105.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.658824, 0.701961, 0.619608, 1 )
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="tween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="just_for_visuals" type="Node2D" parent="." index="5"]

editor/display_folded = true

[node name="up" type="Sprite" parent="just_for_visuals" index="0"]

position = Vector2( 5, -15 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 4
_sections_unfolded = [ "Animation", "Offset" ]

[node name="in" type="Sprite" parent="just_for_visuals" index="1"]

position = Vector2( 5, -10 )
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 6
frame = 8
_sections_unfolded = [ "Animation" ]


